--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -16,6 +16,8 @@ nav {
     position: fixed;
     border-bottom: rgba(26, 24, 24, 0.822) 2.5px solid;
     backdrop-filter: blur(40px);
+    box-shadow: 0px 0.3px 1px 0.3px rgba(0, 0, 0, 0.295);
+    
 
 }
 
@@ -29,7 +31,7 @@ nav {
 .nav-list, li{
     margin-left: 1vh;
     text-decoration: none;
-    color: tomato;
+   
 }
 
 
