--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@186;265;395;405;735;884&display=swap');
+
 * {
   border: none;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Inter', sans-serif;
 }
 
 .standard-section {
