--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -17,10 +17,8 @@ nav {
     border-bottom: rgba(26, 24, 24, 0.822) 2.5px solid;
     backdrop-filter: blur(40px);
     box-shadow: 0px 0.3px 1px 0.3px rgba(0, 0, 0, 0.295);
-    
-
+    z-index: 100;
 }
-
 
 .nav-list {
     display: flex;
