--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -19,3 +19,10 @@ h1 {
   font-size: 2em;
   font-variant: small-caps
 }
+
+input {
+  margin: 8px;
+  padding: 3px 5px;
+  border: solid black 2px;
+  font-size: 1em;
+}
