--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -6,7 +6,10 @@
 }
 
 nav {
+    backdrop-filter: blur(40px);
+    box-shadow: 0px 0.3px 1px 0.3px rgba(0, 0, 0, 0.295);
     height: 10vh;
+    font-size: large;
     min-height: 70px;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.486);
@@ -15,8 +18,6 @@ nav {
     align-items: center;
     position: fixed;
     border-bottom: rgba(26, 24, 24, 0.822) 2.5px solid;
-    backdrop-filter: blur(40px);
-    box-shadow: 0px 0.3px 1px 0.3px rgba(0, 0, 0, 0.295);
     z-index: 100;
 }
 
