--- a/client/src/styles/HomeSection1.css
+++ b/client/src/styles/HomeSection1.css
@@ -1,5 +1,6 @@
 * {
-    margin-top: min(100px);
+  
+    margin-top: 70px;
     border: none;
     box-sizing: border-box;
     margin: 0;
@@ -11,5 +12,4 @@
     height: 100vh;
     padding-top: 10vh;
     border-bottom: 3px solid;
-
 }
