--- a/client/src/styles/dashboard.css
+++ b/client/src/styles/dashboard.css
@@ -4,3 +4,23 @@
     margin: 0;
     padding: 0;
   }
+
+  .dashboard .profile-picture {
+    height: 10vh;
+    width: 10vh;
+    object-fit: cover;
+    border-radius: 100%;
+    border: 0.5vh solid black;
+    margin-bottom: 2vh;
+  }
+
+  .dashboard .update-profile{
+    display: flex;
+    align-items: center;
+  }
+
+  .dashboard .header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
