--- a/client/src/styles/profile.css
+++ b/client/src/styles/profile.css
@@ -5,4 +5,33 @@
     padding: 0;
   }
 
-  
+  .profile img {
+    height: 30vh;
+    width: 30vh;
+    object-fit: cover;
+    border-radius: 100%;
+    border: 0.5vh solid black;
+    margin-bottom: 2vh;
+  }
+
+  .profile .picture{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .profile #address{
+    width: 50vh;
+  }
+
+  .profile form{
+    display: flex;
+  }
+
+  .profile .formtext{
+    margin-left: 10vh;
+  }
+
+  .profile .section {
+    margin-bottom: 3vh;
+  }
