--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -9,14 +9,15 @@ nav {
     backdrop-filter: blur(40px);
     box-shadow: 0px 0.3px 1px 0.3px rgba(0, 0, 0, 0.295);
     height: 10vh;
+    min-height: 70px;
     font-size: large;
-    
     width: 100%;
     background-color: rgba(255, 255, 255, 0.486);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
+    position: sticky;
+    top: 0;
     border-bottom: rgba(26, 24, 24, 0.822) 2.5px solid;
     z-index: 100;
 }
