--- a/client/src/styles/dashboard.css
+++ b/client/src/styles/dashboard.css
@@ -24,3 +24,15 @@
     align-items: center;
     justify-content: space-between;
   }
+
+  .dashboard .hello {
+    margin: 2vh 0;
+    font-size: 3em;
+  }
+
+  .dashboard  link{
+    padding: 1.1vh;
+    border: 3px solid black;
+    font-size: 1.4em;
+    font-weight: 600;
+  }
