--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -20,6 +20,7 @@ h1 {
   border-bottom: solid black 2px;
   width: max-content;
   padding-bottom: 1vh;
+  padding-right: 15vh;
   margin-bottom: 5vh;
 }
 
@@ -29,4 +30,23 @@ input {
   border: solid black 2px;
   font-size: 1em;
   width: 30vh;
+}
+
+/* ------ SCROLLBAR ------ */
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: black;
+  height:20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(77, 77, 77);
 }
