--- a/client/src/styles/footer.css
+++ b/client/src/styles/footer.css
@@ -1,17 +1,65 @@
 * {
-    border: none;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
+  border: none;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-  .footer #footer {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 5vh;
-    border-top: rgba(26, 24, 24, 0.822) 2.5px solid;
-  }
-  .footer .icons{
-    
-  }
+#footer {
+  display: flex;
+  left: 0;
+  width: 100%;
+  height: 5vh;
+  min-height: 50px;
+  border-top: rgba(26, 24, 24, 0.822) 2.5px solid;
+  bottom: 0;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer .iconsrs i{
+  margin-left: 1vh;
+  margin-right: 1vh;
+  font-size: 40px;
+  align-items: center;
+  justify-content: space-around;
+  left: 1vh;
+
+}
+.footer .icons2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.footer .icons2 i {
+  margin-left: 1vh;
+  margin-right: 1vh;
+  font-size: 35px;
+  align-items: center;
+  justify-content: space-around;
+
+}
+.footer .icons2 p {
+
+  margin-left: 1vh;
+  margin-right: 1vh;
+  font-size: 18px;
+  align-items: center;
+  justify-content: space-around;
+  font-size: large;
+  margin-left: -3px;
+
+}
+
+
+.footer .fas .fab{
+  margin-right: 2vh;
+  font-size: 100px;
+  color: rgba(26, 24, 24, 0.959);
+}
+
+.footer .imgapple{
+  margin-right: 2vh;
+padding-top: 5px;
+}
+
