--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -1,10 +1,3 @@
-* {
-    border: none;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 nav {
     backdrop-filter: blur(40px);
     box-shadow: 0px 0.3px 1px 0.3px rgba(0, 0, 0, 0.295);
@@ -22,6 +15,8 @@ nav {
     z-index: 100;
 }
 
+
+
 .navbar .nav-list {
     display: flex;
     justify-content: space-around;
@@ -31,8 +26,20 @@ nav {
 .navbar .nav-list, li{
     margin-left: 1vh;
     text-decoration: none;
-   
 }
+.navbar .nav1{
+    margin-right: 50vh;
+    
+}
+.navbar .link{
+    font-size: 2.4vh;
+    margin-left: 1.3em;    
+    padding: 1vh; 
+    border: 3px solid black; 
+    margin: 3vh;
+    transition: 0.6s;
+}
+
 
 
 .navbar #logo {
@@ -45,4 +52,22 @@ nav {
     color: rgba(26, 24, 24, 0.959);
     margin: 0 0.7vh;
     margin-left: -50%;
+   
 }
+
+.navbar .link:hover{
+    font-size: 2.4vh;
+    margin-left: 1.3em;    
+    padding: 1vh; 
+    border: 3px solid black; 
+    color: white;
+    background-color: rgba(24, 22, 22, 0.753);
+    margin: 3vh;
+}
+
+
+.navbar .link:active{
+    transform: scale(.96)
+  }
+
+
