--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -1,73 +1,74 @@
-nav {
-    backdrop-filter: blur(40px);
-    box-shadow: 0px 0.3px 1px 0.3px rgba(0, 0, 0, 0.295);
-    height: 10vh;
-    min-height: 70px;
-    font-size: large;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.486);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: sticky;
-    top: 0;
-    border-bottom: rgba(26, 24, 24, 0.822) 2.5px solid;
-    z-index: 100;
+.navbar #logo {
+  height: 8vh;
+  margin: 0 1vh;
+  min-height: 60px;
+}
+.navbar .fas {
+  font-size: 38px;
+  color: rgba(26, 24, 24, 0.959);
+  margin: 0 0.7vh;
+  margin-left: -50%;
 }
 
-
+nav {
+  backdrop-filter: blur(40px);
+  box-shadow: 0px 0.3px 1px 0.3px rgba(0, 0, 0, 0.295);
+  height: 10vh;
+  min-height: 70px;
+  font-size: large;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.486);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  border-bottom: rgba(26, 24, 24, 0.822) 2.5px solid;
+  z-index: 100;
+}
 
 .navbar .nav-list {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    list-style-type: none;
-}
-.navbar .nav-list, li{
-    margin-left: 1vh;
-    text-decoration: none;
-}
-.navbar .nav1{
-    margin-right: 50vh;
-    
-}
-.navbar .link{
-    font-size: 2.4vh;
-    margin-left: 1.3em;    
-    padding: 1vh; 
-    border: 3px solid black; 
-    margin: 3vh;
-    transition: 0.6s;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style-type: none;
 }
 
-
-
-.navbar #logo {
-    height: 8vh;
-    margin: 0 1vh;
-    min-height: 60px;
-}
-.navbar .fas{
-    font-size: 38px;
-    color: rgba(26, 24, 24, 0.959);
-    margin: 0 0.7vh;
-    margin-left: -50%;
-   
+.navbar .nav-list,
+li {
+  margin-left: 1vh;
+  text-decoration: none;
 }
 
-.navbar .link:hover{
-    font-size: 2.4vh;
-    margin-left: 1.3em;    
-    padding: 1vh; 
-    border: 3px solid black; 
-    color: white;
-    background-color: rgba(24, 22, 22, 0.753);
-    margin: 3vh;
+.navbar .nav1 {
+  margin-right: 50vh;
+}
+.navbar .link {
+  font-size: 1.5em;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 1vh;
+  margin: 4vh;
+  transition: 0.6s;
 }
 
+.navbar .link:hover {
+  color: rgb(81, 150, 78);
+}
 
-.navbar .link:active{
-    transform: scale(.96)
-  }
+.navbar .link:active {
+  transform: scale(0.96);
+}
 
+.navbar .fas {
+  transition: 0.6s;
+  margin: 0 3vh;
+}
 
+.navbar .fas:hover {
+  color: rgb(81, 150, 78);
+}
+
+.navbar .fas:active {
+  transform: scale(0.96);
+}
