--- a/client/src/styles/dashboard.css
+++ b/client/src/styles/dashboard.css
@@ -23,9 +23,26 @@
   font-size: 3em;
 }
 
+.dashboard .hello em {
+  font-style: normal;
+  color: rgb(255, 154, 1);
+}
+
 .dashboard link {
   padding: 1.1vh;
   border: 3px solid black;
   font-size: 1.4em;
   font-weight: 600;
+}
+
+.dashboard .flexpage {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.dashboard .cartsum {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
