--- a/client/src/styles/cart.css
+++ b/client/src/styles/cart.css
@@ -1,16 +1,19 @@
+.cartClass{
+    height: 84vh;
+
+}
+
 .flexCart{
     display: flex;
     justify-content: space-evenly;
 }
 
 .flexCart .ButtonBuy{
-  width: 10vh;
+
+  height: 10vh;
+  width: 30vh;
+  text-align: center;
+  margin-left: 13vh;
+  margin-top: 4vh;
 }
 
-.flexCart .ButtonBuy{
-    height: 10vh;
-    width: 30vh;
-    text-align: center;
-    margin-left: 13vh;
-    margin-top: 4vh;
- }
